--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,35 @@
 .App {
     text-align: center;
-}
-
-.App-logo {
-    height: 40vmin;
-    pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-    .App-logo {
-        animation: App-logo-spin infinite 20s linear;
-    }
-}
-
-.App-header {
-    background-color: #282c34;
+    position: relative;
+    background-color: #18191C;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    font-size: calc(10px + 2vmin);
     color: white;
 }
 
-.App-link {
-    color: #61dafb;
+.App-header {
+    background-color: #18191C;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(48px + 2vmin);
+    color: white;
+    position: absolute;
+    top: 5%;
 }
 
-@keyframes App-logo-spin {
-    from {
-        transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(360deg);
-    }
+.App-footer {
+    background-color: #18191C;
+    display: inline;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(16px + 2vmin);
+    color: white;
+    position: absolute;
+    bottom: 0;
 }
