--- a/src/components/Subscription.css
+++ b/src/components/Subscription.css
@@ -1,11 +1,12 @@
 .button {
-    background-color: #4CAF50;
+    background-color: #f47b67;
     border: none;
     color: white;
     height: 100px;
-    width: 400px;
+    width: 300px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     font-size: 32px;
+    border-radius: 8px;
 }
